# friendly

./: .gitignore  ChangeLog.md  cabal.haskell-ci  cabal.project  cabal.project.ci  friendly.cabal
.github/workflows/: haskell-ci.yml  haskell.yml
src/: Main.hs
