cabal-version:       2.2
name:                friendly
version:             0.1.1
synopsis:            Attempt to pretty-print any input
description:         The friendly executable copies standard input
                     to standard output, attempting to pretty-print the
                     input without actually requiring that the input
                     is well-formed in any way.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Edsko de Vries
category:            Development
build-type:          Simple
extra-doc-files:     ChangeLog.md
tested-with:         GHC==9.2.8
                     GHC==9.4.8
                     GHC==9.6.7
                     GHC==9.8.4
                     GHC==9.10.2
                     GHC==9.12.2

source-repository head
  type: git
  location: https://github.com/edsko/friendly

common lang
  build-depends:    base >= 4.16 && < 4.22
  default-language: GHC2021

  ghc-options:
      -Wall
      -Wprepositive-qualified-module
      -Wredundant-constraints
      -Wunused-packages

executable friendly
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:  optparse-applicative >= 0.11 && < 0.20
